// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CNavItemDropdown .vue renders correctly 1`] = `
<li
  class="nav-item dropdown"
  id="1okmp6vrflzjnoof6yx"
>
  <a
    aria-haspopup="true"
    class="nav-link dropdown-toggle"
    href="#"
    id="C-1okmp6vrflzjnoof6yx"
  >
    Dropdown
  </a>
   
  <div
    aria-labbeledby="C-1okmp6vrflzjnoof6yx"
    class="dropdown-menu dropdown-menu-left"
  >
     
  </div>
</li>
`;

exports[`CNavItemDropdown matches custom props snapshot 1`] = `
<li
  class="nav-item dropdown"
  id="zjtjoez4rjjnx7vz9d"
>
  <a
    aria-haspopup="true"
    class="nav-link dropdown-toggle"
    href="#"
    id="C-zjtjoez4rjjnx7vz9d"
  >
    Dropdown
  </a>
   
  <div
    aria-labbeledby="C-zjtjoez4rjjnx7vz9d"
    class="dropdown-menu dropdown-menu-left"
  >
     
  </div>
</li>
`;

exports[`CNavItemDropdown matches custom props snapshot 2`] = `
<li
  class="nav-item dropdown dropup show"
  id="0i8h78zu9fe9jnx7vz9l"
>
  <a
    aria-expanded="true"
    aria-haspopup="true"
    class="nav-link disabled extra"
    href="#"
    id="C-0i8h78zu9fe9jnx7vz9l"
  >
    test
  </a>
   
  <div
    aria-labbeledby="C-0i8h78zu9fe9jnx7vz9l"
    class="dropdown-menu dropdown-menu-right show extra"
  >
     
  </div>
</li>
`;
